gitops/external-homelabapi/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-api-cloud-buc-sh
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway
    namespace: external-gateway
  hostnames:
  - "api.cloud.buc.sh"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: external-homelab-api
      # namespace: external-homelab-api
      port: 8080
      weight: 1
    matches:
    - method: GET
      path:
        type: Exact
        value: /
    - method: GET
      path:
        type: PathPrefix
        value: /_next
    - method: GET
      path:
        type: Exact
        value: /index.html
    - method: GET
      path:
        type: Exact
        value: /404.html
    - method: GET
      path:
        type: Exact
        value: /favicon.ico
    - method: GET
      path:
        type: PathPrefix
        value: /icons
    - method: GET
      path:
        type: PathPrefix
        value: /api/public
 
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.envoyproxy.io
        kind: HTTPRouteFilter
        name: 403-denied
