gitops/external-homelabapi/external-homelabapi.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-homelabapi
  labels:
    pod-security.kubernetes.io/enforce: restricted

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-homelab-api
  namespace: external-homelabapi
  labels:
    app.kubernetes.io/name: homelab-api
    app.kubernetes.io/instance: external
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homelab-api
      app.kubernetes.io/instance: external
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homelab-api
        app.kubernetes.io/instance: external
    spec:
      containers:
      - name: homelab-api
        image: ghcr.io/thomasbuchinger/homelab-api:main
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/livez
            port: 8080
        readinessProbe:
          httpGet:
            path: /api/readyz
            port: 8080
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
      securityContext:
        runAsNonRoot: true

---
apiVersion: v1
kind: Service
metadata:
  name: external-homelab-api
  namespace: external-homelabapi
spec:
  selector:
    app.kubernetes.io/name: homelab-api
    app.kubernetes.io/instance: external
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-homelab-api-http
  namespace: external-homelabapi
spec:
  rules:
  - host: api.10.0.0.21.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-homelab-api
            port:
              number: 8080

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-homepage-egress
  namespace: external-homelabapi
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: homelab-api
      app.kubernetes.io/instance: external
  policyTypes:
    - Egress
    - Ingress
  ingress:
  # Allow Ingress
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: external-http
    ports:
    - protocol: TCP
      port: 8080
